hphp/hack/test/typecheck/assignment_sequencing/list_increment_nested.php.exp
File "list_increment_nested.php", line 6, characters 15-15:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "list_increment_nested.php", line 6, characters 15-16:
Unsequenced modification and access to local variable. Modified here (Typing[4143])
File "list_increment_nested.php", line 6, characters 27-28:
And accessed here
